--- a/startOpenAI.ipynb
+++ b/startOpenAI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "4aac216f",
    "metadata": {},
    "outputs": [],
@@ -26,14 +26,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "いくつかのポイントをまとめると以下のようになります。\n",
+      "大谷翔平は、日本のプロ野球選手であり、現在はアメリカのロサンゼルス・エンゼルスに所属しています。ポジションは投手と外野手を兼任しており、二刀流として有名です。\n",
       "\n",
-      "- 大谷翔平は、日本のプロ野球選手で、現在はアメリカのメジャーリーグベースボール（MLB）のロサンゼルス・エンゼルスに所属しています。\n",
-      "- 大谷は、投手としても打者としても活躍することができる「二刀流」として知られており、同時に両方のポジションでメジャーリーグでの活躍を続けています。\n",
-      "- 大谷は、2013年にプロ野球選手としてデビューし、その後2017年にアメリカに渡ってメジャーリーグのエンゼルスに入団しました。\n",
-      "- 大谷は、2018年には新人王を受賞し、2019年にはオールスターゲームに初出場するなど、その実力が認められています。\n",
-      "- 大谷は、投手としては最速101マイルのストレートを投げ、打者としてもパワーと技術を兼ね備えています。\n",
-      "- 大谷には、アジアの野球ファンから熱狂的な支持があり、彼の試合は日本、韓国、中国などの国々でも積極的に放送されています。\n"
+      "1994年7月5日生まれで、滋賀県出身です。高校時代には、甲子園でエースとして活躍し、2012年のドラフト会議で福岡ソフトバンクホークスから指名を受けました。プロ入り後は、主に投手として活躍し、2016年には最多勝を獲得し、リーグ優勝に貢献しました。\n",
+      "\n",
+      "2017年には、メジャーリーグベースボール（MLB）のロサンゼルス・エンゼルスに移籍し、外野手としても出場しました。2018年には、MLB史上初となる同時期に20本以上の本塁打を放ち、10勝以上を挙げた二刀流選手として、注目を集めました。\n",
+      "\n",
+      "大谷翔平は、抜群の身体能力と技術を持ち合わせ、球界を代表するスター選手の一人として知られています。\n"
      ]
     }
    ],
@@ -49,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "00fb5654",
    "metadata": {},
    "outputs": [
@@ -59,7 +58,7 @@
      "text": [
       "\n",
       "\n",
-      "・AI お技タイトルジェネレーター\n"
+      "『タイトルマジック』\n"
      ]
     }
    ],
@@ -156,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "fc4fbafb",
    "metadata": {},
    "outputs": [
@@ -167,12 +166,48 @@
       "\n",
       "\n",
       "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3m I should research what the culture and customs of South Korea are\n",
+      "\u001b[32;1m\u001b[1;3m I need to find the height of the highest mountain in Japan and then calculate its fifth root.\n",
       "Action: Search\n",
-      "Action Input: \"South Korea culture and customs\"\u001b[0m\n",
-      "Observation: \u001b[36;1m\u001b[1;3mTaboos in South Korean Culture · Do not wear your shoes in places of worship or peoples' homes · Do not put your feet on furniture · Do not eat or drink in public ...\u001b[0m\n",
+      "Action Input: \"highest mountain in Japan\"\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3mMount Fuji\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3m I need to find the height of Mount Fuji\n",
+      "Action: Search\n",
+      "Action Input: \"height of Mount Fuji\"\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3m12,388′\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3m I need to convert this to meters\n",
+      "Action: Calculator\n",
+      "Action Input: 12,388 * 0.3048\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Entering new LLMMathChain chain...\u001b[0m\n",
+      "12,388 * 0.3048\u001b[32;1m\u001b[1;3m\n",
+      "```python\n",
+      "print(12388 * 0.3048)\n",
+      "```\n",
+      "\u001b[0m\n",
+      "Answer: \u001b[33;1m\u001b[1;3m3775.8624\n",
+      "\u001b[0m\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "\n",
+      "Observation: \u001b[33;1m\u001b[1;3mAnswer: 3775.8624\n",
+      "\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3m I now need to calculate the fifth root of this number\n",
+      "Action: Calculator\n",
+      "Action Input: 3775.8624^(1/5)\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Entering new LLMMathChain chain...\u001b[0m\n",
+      "3775.8624^(1/5)\u001b[32;1m\u001b[1;3m\n",
+      "```python\n",
+      "print(3775.8624**(1/5))\n",
+      "```\n",
+      "\u001b[0m\n",
+      "Answer: \u001b[33;1m\u001b[1;3m5.1928195584457635\n",
+      "\u001b[0m\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "\n",
+      "Observation: \u001b[33;1m\u001b[1;3mAnswer: 5.1928195584457635\n",
+      "\u001b[0m\n",
       "Thought:\u001b[32;1m\u001b[1;3m I now know the final answer\n",
-      "Final Answer: Taboos in South Korean Culture include not wearing shoes in places of worship or peoples' homes, not putting feet on furniture, and not eating or drinking in public.\u001b[0m\n",
+      "Final Answer: The height of the highest mountain in Japan is 3775.8624 meters and its fifth root is 5.1928195584457635.\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
@@ -180,10 +215,10 @@
     {
      "data": {
       "text/plain": [
-       "\"Taboos in South Korean Culture include not wearing shoes in places of worship or peoples' homes, not putting feet on furniture, and not eating or drinking in public.\""
+       "'The height of the highest mountain in Japan is 3775.8624 meters and its fifth root is 5.1928195584457635.'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +229,7 @@
     "from langchain import LLMMathChain, SerpAPIWrapper\n",
     "\n",
     "llm = OpenAI(temperature=0)\n",
-    "search = SerpAPIWrapper(serpapi_api_key='9be46c822744dca7130534a5faaa19be145f821bacf836affdeee4add96c38ae')\n",
+    "search = SerpAPIWrapper()\n",
     "llm_math_chain = LLMMathChain(llm=llm, verbose=True)\n",
     "tools = [\n",
     "    Tool(\n",
@@ -211,8 +246,8 @@
     "\n",
     "llm = OpenAI(temperature=0)\n",
     "agent = initialize_agent(tools, llm, agent=\"zero-shot-react-description\", verbose=True)\n",
-    "# agent.run(\"日本で一番高い山の高さは何メートルですか?その高さの5乗根を求めてください。\")\n",
-    "agent.run(\"韓国の覚えておくべき文化，風習を教えてください\")"
+    "agent.run(\"日本で一番高い山の高さは何メートルですか?その高さの5乗根を求めてください。\")\n",
+    "# agent.run(\"韓国の覚えておくべき文化，風習を教えてください\")"
    ]
   },
   {
